.k8s/release/elk-deployment.yml
# Stateless
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  namespace: itchybitchyspider
spec:
  selector:
    matchLabels:
      app: elk
      tier: analysis
  replicas: 1
  template:
    metadata:
      labels:
        app: elk
        tier: analysis
    spec:
      containers:
      - name: elk
        image: willdurand/elk
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: elk
  namespace: itchybitchyspider
  labels:
    app: elk
    tier: analysis
spec:
  ports:
  - name: http
    port: 80
    targetPort: 81
    protocol: TCP
  selector:
    app: elk
    tier: analysis
