.k8s/release/mariadb-deployment.yml
# State
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: itchybitchyspider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.2
        ports:
        - name: mariadb
          containerPort: 3306
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: itchybitchyspider
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
  selector:
    app: mariadb
  clusterIP: None
