.k8s/release/php-fpm-deployment.yml
# Stateless
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  selector:
    matchLabels:
      app: php
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: php
        tier: backend
    spec:
      containers:
      - name: php
        image: <your-container-registry>/php
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: php
    tier: backend
spec:
  ports:
  - name: fast-cgi-listener
    port: 9000
    targetPort: 9000
  selector:
    app: php
    tier: backend
