.k8s/release/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: itchybitchyspider
spec:
  backend:
    serviceName: loadbalancer
    servicePort: 80
